test: run RealAPI suite across provider matrix